--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: linear-gradient(to right, #fceabb, #d344a3);
+  background: linear-gradient(to right, #e274be, #d344a3);
   font-family: 'Segoe UI', sans-serif;
   overflow-x: hidden;
   color: #333;
@@ -13,7 +13,7 @@ body {
   margin: auto;
   padding: 30px;
   text-align: center;
-  background: white;
+  background: rgb(247, 247, 247);
   border-radius: 20px;
   box-shadow: 0 10px 20px rgba(0,0,0,0.2);
   margin-top: 50px;
@@ -39,7 +39,7 @@ body {
   position: relative;
   display: flex;
   overflow: hidden;
-  height: 555px;
+  height: 600px;
      border-radius: 15px;
   margin: 5px 0;
   
@@ -47,7 +47,7 @@ body {
 
 .slide {
   width: 100%;
-  height: 100%;
+  height: 110%;
   object-fit: cover;
   position: absolute;
   border-radius: 15px;
